@@ -37,6 +37,11 @@ USER-VISIBLE CHANGES:
 - Update the French translations (didier-devel)
 - Add considerably more location names for use in auto-generated
   names for bases. (UrbanVersis32)
+- Add basic auto-save feature that automatically saves the game
+  at day change every change 3 days in game time.  Thanks to
+  EinstokFair for the suggestion. The implementation is not
+  exactly 1:1 with their suggestion, but it was better than
+  nothing. (nthykier)
 
 V1.00 (2020.07.02):
 
